--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,12 @@
             <version>3.4.1</version>
         </dependency>
 
-
-
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <build>
